# evmone

./: CMakeLists.txt
cmake/: MergeStaticLibaries.cmake  ProjectEVMC.cmake
cmake/Hunter/: config.cmake  init.cmake
lib/evmone/: CMakeLists.txt  analysis.cpp  analysis.hpp  execution.cpp  instructions.cpp
